crates/analyzer/tests/snapshots/errors__array_mixed_types.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: type mismatch
  ┌─ [snippet]:3:30
  │
3 │   let x: Array<u16, 3> = [1, address(0), "hi"]
  │                              ^^^^^^^^^^ this has type `address`; expected type `u16`

error: type mismatch
  ┌─ [snippet]:3:42
  │
3 │   let x: Array<u16, 3> = [1, address(0), "hi"]
  │                                          ^^^^ this has type `String<2>`; expected type `u16`


